# fzf-wifi-menu

./: README.md  pyproject.toml
src/wifi_menu/: __init__.py
